--- a/Films/Views/Authentication/Login.cshtml
+++ b/Films/Views/Authentication/Login.cshtml
@@ -17,12 +17,12 @@
             <div class="form-group">
                 <label>Email</label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span asp-validation-for="Email" style="color: #F4C430" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Contraseña</label>
                 <input asp-for="Password" type="password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <span asp-validation-for="Password" style="color: #F4C430" class="text-danger"></span>
             </div>
             <button type="submit" class="btn-submit">Login</button>
         </form>
