arreglado bug de amigos, reestructurado controler

--- a/Films/Views/Account/Profile.cshtml
+++ b/Films/Views/Account/Profile.cshtml
@@ -61,8 +61,8 @@
     <main class="profile-main">
         <!-- FRIENDS -->
         <div class="friends-header">
-            <a asp-controller="Account" asp-action="Friends" class="friends-link text-decoration-none">
-                <h3  style="color: #F4C430"> @Model.User.FriendFkIdFriendNavigations.Count() Amigos</h3> 
+            <a asp-controller="Friend" asp-action="Friends" class="friends-link text-decoration-none">
+                <h3 style="color: #F4C430"> @Model.User.FriendFkIdFriendNavigations.Count() Amigos</h3>
             </a>
         </div>
 
