--- a/Films/wwwroot/css/MovieDetail.css
+++ b/Films/wwwroot/css/MovieDetail.css
@@ -64,6 +64,10 @@ p{
 .movie-detail-body {
     margin-top: 2rem;
     font-size: 1.1rem;
+    background-color: grey;
+    border-radius: 1rem;
+    padding: 10px 20px;
+    max-width: 50%;
 }
 
 .genres {
@@ -207,4 +211,108 @@ p{
     box-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
     transform: scale(1.05);
     transition: all 0.2s ease;
+}
+
+.related-movies{
+    margin-top: 20px;
+}
+
+.movie-scroll-container {
+    display: flex;
+    overflow-x: auto;
+    gap: 20px;
+    padding: 20px 0px;
+    scroll-behavior: smooth;
+}
+
+.movie-card {
+    min-width: 180px;
+    height: auto;
+    flex-shrink: 0;
+    background-color: #222;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+}
+
+.movieImg {
+    position: relative;
+    height: 240px;
+    background-size: cover;
+    background-position: center;
+}
+
+.movieBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 32px;
+    height: 32px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    transition: background-color 0.2s;
+    display: flex;
+    align-items: center;
+    z-index: 2;
+    justify-content: center;
+}
+
+    .movieBtn:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+    }
+
+.movie-card h3,
+.movie-card p {
+    margin: 8px 12px;
+    font-size: 0.85rem;
+}
+
+.movie-scroll-container::-webkit-scrollbar {
+    height: 10px;
+}
+
+.movie-scroll-container::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.movie-scroll-container::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+    .movie-scroll-container::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+
+/*Firefox*/
+
+.movie-scroll-container {
+    padding: 0;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
+}
+
+/*Modal de listas*/
+
+.bg-custom-button {
+    background-color: #F4C430;
+    color: black;
+}
+
+    .bg-custom-button:hover {
+        background-color: #e0b423;
+    }
+
+/*Modal de filtros*/
+
+.border-radius {
+    border-radius: 20px;
 }
