--- a/Films/wwwroot/css/MovieDetail.css
+++ b/Films/wwwroot/css/MovieDetail.css
@@ -62,12 +62,11 @@ p{
 }
 
 .movie-detail-body {
+    display: flex;
+    flex-direction: row;
     margin-top: 2rem;
     font-size: 1.1rem;
-    background-color: grey;
-    border-radius: 1rem;
     padding: 10px 20px;
-    max-width: 50%;
 }
 
 .genres {
@@ -315,4 +314,67 @@ p{
 
 .border-radius {
     border-radius: 20px;
+}
+
+.actor-pics {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3.5rem;
+    justify-content: flex-start;
+}
+
+.actor-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50px;
+    text-align: center;
+}
+    .actor-item img {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+    }
+
+
+    .actor-item span {
+        font-size: 0.8rem;
+        color: #ccc;
+        margin-top: 0.3rem;
+    }
+
+.movie-detail-sinopsis {
+    flex: 2; /* más espacio */
+    margin-right: 2rem;
+}
+
+.movie-detail-actors {
+    flex: 1; /* menos espacio */
+    display: flex;
+    flex-direction: column;
+}
+
+    .movie-detail-actors p {
+        margin-bottom: 1rem;
+        font-size: 1.1rem;
+        color: white;
+    }
+
+
+@media (max-width: 768px) {
+    .movie-detail-body {
+        flex-direction: column;
+    }
+
+    .movie-detail-sinopsis,
+    .movie-detail-actors {
+        flex: 1;
+        margin-right: 0;
+    }
+
+    .actor-pics {
+        justify-content: center;
+    }
 }
