--- a/Films/Views/Shared/_Layout.cshtml
+++ b/Films/Views/Shared/_Layout.cshtml
@@ -40,8 +40,8 @@
                         // Retrieves the URL claim saved in the SignUp method
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <button class="border-0" data-bs-toggle="modal" data-bs-target="#notificationModal">
-                                    <img class="bg-white" src="~/images/notificationBell.png" alt="Notificaciones"
+                                <button class="border-0 p-0" data-bs-toggle="modal" data-bs-target="#notificationModal">
+                                    <img class="bg-white p-0" src="~/images/notificationBell.png" alt="Notificaciones"
                                          style="width:40px; height:40px; object-fit:cover;" />
                                 </button>
                                 @await Component.InvokeAsync("NotificationsCount")
