--- a/Films/Views/Account/Profile.cshtml
+++ b/Films/Views/Account/Profile.cshtml
@@ -55,6 +55,10 @@
                 <p>No tienes listas disponibles.</p>
             }
         </div>
+        <!-- REQUEST SECTION-->
+        <div class="request-section col-12 col-md-12 mt-4">
+        <h3 style=" color: #F4C430;" class="section-title">Solicitudes Pendientes</h3>
+        </div>
     </aside>
 
     <!-- RIGHT SECTION -->
