--- a/Films/Views/Shared/_Layout.cshtml
+++ b/Films/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Films</title>
+    <title>@ViewData["Title"] - Pelist</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Films.styles.css" asp-append-version="true" />
@@ -14,42 +14,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-nav border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Films</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Pelist</a>
                 <button class="navbar-toggler" type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target=".navbar-collapse"
+                        data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent"
                         aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                    
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        // Retrieves the URL claim saved in the SignUp method
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <button class="border-0 p-0" data-bs-toggle="modal" data-bs-target="#notificationModal">
-                                    <img class="bg-white p-0" src="~/images/notificationBell.png" alt="Notificaciones"
-                                         style="width:40px; height:40px; object-fit:cover;" />
-                                </button>
-                                @await Component.InvokeAsync("NotificationsCount")
-                            </li>
-                        </ul>
 
-                        var imageUrl = User.Claims.FirstOrDefault(c => c.Type == "ImageUrl")?.Value??"https://res.cloudinary.com/duc5qq3mn/image/upload/v1744890605/profile-icon-design-free-vector_m86jfn.jpg";
-                        <ul class="navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            var imageUrl = User.Claims.FirstOrDefault(c => c.Type == "ImageUrl")?.Value ?? "https://res.cloudinary.com/duc5qq3mn/image/upload/v1744890605/profile-icon-design-free-vector_m86jfn.jpg";
+
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Profile">
                                     <img src="@imageUrl" alt="Foto de perfil"
@@ -57,34 +39,42 @@
                                          style="width:40px; height:40px; object-fit:cover;" />
                                 </a>
                             </li>
-                        </ul>
 
-                        <!--Modal de notificaciones-->
-                        <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content bg-dark text-white">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="notificationModalLabel">Notificaciones</h5>
-                                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                            <li class="nav-item">
+                                <button class="border-0 p-0" data-bs-toggle="modal" data-bs-target="#notificationModal">
+                                    <img class="bg-bell p-0" src="~/images/notificationBell.png" alt="Notificaciones"
+                                         style="width:40px; height:40px; object-fit:cover;" />
+                                </button>
+                                @await Component.InvokeAsync("NotificationsCount")
+                            </li>
+
+                            <!--Modal de notificaciones-->
+                            <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content bg-dark text-white">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="notificationModalLabel">Notificaciones</h5>
+                                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                                        </div>
+                                        @await Component.InvokeAsync("Notifications")
                                     </div>
-                                    @await Component.InvokeAsync("Notifications")
                                 </div>
                             </div>
-                        </div>
-                    }
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-                            <button type="submit" class="btn btn-logout">Cerrar sesión</button>
-                            @Html.AntiForgeryToken()
-                        </form>
-                    }
-                    else
-                    {
-                        <a asp-controller="Authentication" asp-action="Login" class="btn btn-login">Iniciar sesión</a>
-                    }
 
-                    
+                            <li class="nav-item">
+                                <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                    <button type="submit" class="btn btn-logout">Cerrar sesión</button>
+                                    @Html.AntiForgeryToken()
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a asp-controller="Authentication" asp-action="Login" class="btn btn-login">Iniciar sesión</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
