--- a/Films/Views/Shared/_MovieCategoryPartial.cshtml
+++ b/Films/Views/Shared/_MovieCategoryPartial.cshtml
@@ -2,7 +2,8 @@
 
 <h3 class="text-white mt-4">@Model.Item1</h3>
 
-<div class="movie-scroll-container">
+<div class="@(Model.Item1 != "Resultados del filtro" ? "movie-scroll-container" : "movie-vertical-container")">
+
     @foreach (var movie in Model.Item2)
     {
         var movieList = Model.Item3.FirstOrDefault(l => l.FkIdMovie == movie.Id);
@@ -45,10 +46,20 @@
                     <p class="text-white">
                         @(movie.Title.Length > 30 ? movie.Title.Substring(0, 30) + "..." : movie.Title)
                     </p>
-                    <p class="text-white">★ @movie.Review.ToString("0.0") | @(DateTime.Parse(movie.ReleaseDate).Year)</p>
+                    <p class="text-white">★ @movie.Review.ToString("0.0") |
+                        @{
+                            if (DateTime.TryParse(movie.ReleaseDate, out var releaseDate))
+                            {
+                                @releaseDate.Year
+                            }
+                            else
+                            {
+                                @("---")
+                            }
+                        }
+                    </p>
                 </div>
             </a>
         </div>
-
     }
 </div>
